[project]
name = "robots-on-a-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "fastapi>=0.115.6",
    "gymnasium[mujoco,other]>=1.0.0",
    "halo>=0.0.31",
    "opencv-python>=4.10.0.84",
    "spinners>=0.0.24",
    "stable-baselines3[extra]>=2.4.0",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
    "wonderwords>=2.2.0",
]

[tool.uv.workspace]
members = ["roas"]
